# hdf5-pickles

./: .gitignore  AGENTS.md  CMakeLists.txt  MARKERS.md  README.md  TOOLS.md  TUTORIAL.md
.devcontainer/: Dockerfile  README.md  check.py  devcontainer.json  post-create.sh
.devcontainer/testdata/: h5policy-accept-with-warnings.json
docs/: A CVE strategy for the HDF5 library.md  HDF5 File Format Specification Evolution.md  Mapping HDF5 Binary Primitives onto an Object Store.md  README.md  What is bounded raw decode.md  tool-overview.md
docs/spec/: drv_info.yml  dspace_enc.yml  dtype_enc.yml  earray.yml  farray.yml  fheap.yml  fsm.yml  gheap.yml  lheap.yml  messages.yml  ohdr.yml  ohdr_msgs.yml  ref_enc.yml  sohm.yml  stab.yml  superblock.yml  v1_btree.yml  v2_btree.yml  vds.yml
emacs/: README.md  hdf5-poke-core.el  hdf5-poke-ui.el  hdf5-poke.el
emacs/tests/: hdf5-poke-process-test.el  hdf5-poke-test.el  run.sh
emacs/tests/fixtures/: README.md  make_hdf5_fixtures.py
examples/: chunk-b-tree-index.pk  minimal-hdf5.pk
h5explain/: README.md
h5explain/pickles/: h5explain.pk  h5explain_check.pk
h5explain/tests/: .gitignore  check_docs.py  make_fixtures.py  run.sh  test_h5explain.py
h5explain/tools/: h5explain
h5patch/: README.md
h5patch/pickles/: h5_patch.pk
h5patch/tests/: .gitignore  check_docs.py  run.sh  test_h5patch.py
h5patch/tools/: h5patch
h5policy/: README.md
h5policy/docs/: H5PolicyLimits.md  H5PolicyProfile.md  README.md
h5policy/pickles/: h5_btree2.pk  h5_checked.pk  h5_chunkindex.pk  h5_consumer.pk  h5_dataspace.pk  h5_datatype.pk  h5_dense_attrs.pk  h5_dense_links.pk  h5_dispatch.pk  h5_external.pk  h5_findings.pk  h5_fixed_invariants.pk  h5_group.pk  h5_layout.pk  h5_messages.pk  h5_policy.pk  h5_profiles.pk  h5_run_options.pk  h5_shared.pk  h5_sohm.pk  h5_validate.pk  h5_vds.pk  h5_walk.pk
h5policy/tests/: .gitignore  README.md  _check.py  check_cache_image_docs.py  check_lazy_docs.py  run.sh  unit_consumer.pk  unit_datatype.pk  unit_fsinfo.pk  unit_limits.pk  unit_messages.pk  unit_reached.pk  unit_report_wrapper.sh  unit_seam.pk
h5policy/tests/cve/: cve_2020_10812.h5  dtype_compound_unbounded_recursion.h5  dtype_unbounded_recursion.h5  make_cve_2020_10812.py  mdci_entry_offby_header.h5  sizeof_size_uninit_length.h5  vds_nentries_mult_overflow.h5
h5policy/tests/expected/: coverage-chunk_ext_array.yml  coverage-chunk_fixed_array_paged.yml  coverage-chunked_v4_index.yml  coverage-dense_attribute.yml  coverage-dense_links_deep.yml  coverage-fsinfo_page_nonpersistent.yml  coverage-old_style_group.yml  coverage-shared_attr_datatype.yml  coverage-sohm_huge_btree.yml  cve-cve_2020_10812.yml  cve-dtype_compound_unbounded_recursion.yml  cve-dtype_unbounded_recursion.yml  cve-mdci_entry_offby_header.yml  cve-sizeof_size_uninit_length.yml  cve-vds_nentries_mult_overflow.yml  integration-accounted_metadata_limit.yml  integration-btree_depth.yml  integration-chunk_count.yml  integration-chunk_v2_btree_depth.yml  integration-chunk_v2_btree_metadata_limit.yml  integration-completion-state-continued.yml  integration-continue-after-corruption-alias.yml  integration-datatype_recursion_depth.yml  integration-deep_link-forensic.yml  integration-deep_link-strict.yml  integration-filter_count.yml  integration-filter_parameter_depth.yml  integration-fsm_metadata_limit.yml  integration-invalid_profile_before_io.yml  integration-metadata_ratio-reject.yml  integration-metadata_ratio-warning.yml  integration-multi_filter-baseline.yml  integration-nonstrict_default.yml  integration-object_header_chunks.yml  integration-rank_limit.yml  integration-single_value-attribute.yml  integration-sohm_btree_depth.yml  integration-sohm_btree_metadata_limit.yml  integration-sohm_huge_btree_depth.yml  integration-sohm_huge_btree_metadata_limit.yml  (+157 more)
h5policy/tools/: h5mutate  h5policy  h5policy-crashfuzz  h5policy-diff  h5policy-fuzz  h5policy-fuzzlib  h5policy-gencorpus  h5policy-lazy  h5policy-probe  h5policy-seamcheck  h5policy-truncate
h5policy/tools/probe/: .gitignore  README.md  h5probe.c  h5trace.c  make_cache_image.c  make_cache_image_dense.c
pickles/: common.pk  construct.pk  drv_info.pk  dspace_enc.pk  dtype_enc.pk  earray.pk  farray.pk  fheap.pk  fsm.pk  gheap.pk  h5_format_constants.pk  hdf5_poke_emacs.pk  lheap.pk  messages.pk  ohdr.pk  ohdr_msgs.pk  ref_enc.pk  sohm.pk  stab.pk  superblock.pk  v1_btree.pk  v2_btree.pk  vds.pk
pickles/tests/: unit_ohdr_msgs.pk
registry/: README.md  cve-case.yml  finding-backlog.yml  findings.yml  h5cve-matrix-policy.yml  lazy-validation.json  libhdf5-evidence.yml  message-routing.yml  truncation-sweep.json  validation-coverage.yml  verification-coverage.yml
registry/cases/: arithmetic-divergences-backlog.yml  continuation-self-overlap.yml  dense-corder-leaf-checksum.yml  fsm-section-bin-range.yml  fsm-section-divergences.yml  link-name-charset-unenforced.yml  sohm-index-divergences.yml
registry/findings/: README.md
registry/findings/catalog/: address_space_bounds.yml  btree_heap_index.yml  cache_image_dependency_graph.yml  chunk_index.yml  dataset_layout_filter_fill.yml  dataspace_dimension.yml  datatypes.yml  dense_index.yml  external_file_list.yml  external_link.yml  heap_structures.yml  message_envelope.yml  object_header_continuation.yml  shared_messages_legacy.yml  validation_controls.yml  virtual_dataset.yml
registry/findings/routes/: H5_CORRUPT_BAD_CHECKSUM.yml  H5_CORRUPT_BAD_SIGNATURE.yml  H5_CORRUPT_BTREE_NODE_ENTRY_COUNT.yml  H5_CORRUPT_DENSE_CORDER_INDEX_DUPLICATE_ID.yml  H5_CORRUPT_DENSE_CORDER_INDEX_MISSING_ID.yml  H5_CORRUPT_FRACTAL_HEAP_ID.yml  (+36 more)
src/: h5markers.cpp
tests/: hdf5-poke-process-test.el  hdf5-poke-test.el
tests/fixtures/: README.md
tools/: check_registry.py  check_tool_overview.py  check_tutorial.py  finding_registry.py  h5cve  h5explain  h5mutate  h5patch  h5policy  h5policy-crashfuzz  h5policy-diff  h5policy-fuzz  h5policy-fuzzlib  h5policy-gencorpus  h5policy-lazy  h5policy-probe  h5policy-seamcheck  h5policy-truncate  message_routing.py  pkdoc.py
tools/lib/: h5common.sh
